[project]
name = "cloudflare-crawl"
version = "0.1.0"
description = "Start, monitor and download Cloudflare Crawl data"
readme = "README.md"
authors = [
    { name = "Ed Summers", email = "ehs@pobox.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "typer>=0.24.1"
]

[project.scripts]
cloudflare-crawl = "cloudflare_crawl:app"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.20.4",
    "ruff>=0.15.6",
    "altair>=6.0.0",
    "anthropic>=0.84.0",
    "jupyterlab>=4.5.6",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic-ai-slim>=1.68.0",
]
